Add date picker

--- a/test1.html
+++ b/test1.html
@@ -3,6 +3,8 @@
 
 <head>
     <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+    <link href="dp-light.css" rel="stylesheet">
+    <script defer src="datepicker.js"></script>
     <style type="text/css">
         body {
             background: #eee;
@@ -286,6 +288,12 @@
                     }
                 })
                 *****/
+            picker.attach({
+                target: "00N8J000000Njlr"
+            });
+            picker.attach({
+                target: "00N8J000000Njlw"
+            });
 
             let visit_type = 'invalid'
             const DAY_VISIT = 'Day Visit'
