Default group type to Individual and rename Group to Team

--- a/test1.html
+++ b/test1.html
@@ -148,9 +148,8 @@
             <h2>Type of Reservation</h2>
             <label for="00N8J000000NrmT"> Group Type:</label>
             <select id="00N8J000000NrmT" name="00N8J000000NrmT" title="Group Type">
-                <option value="">--None--</option>
                 <option value="Individual">Individual (Single, Couple, or Family)</option>
-                <option value="Group">Group (Churches, Youth Groups, Schools, Homeschool Co-Ops, etc.)</option>
+                <option value="Group">Team (Churches, Youth Groups, Schools, Homeschool Co-Ops, etc.)</option>
             </select>
 
             <label for="00N8J000000Njlh">How many in your party?</label>
