Include 2 dates for day visits

--- a/test1.html
+++ b/test1.html
@@ -170,13 +170,13 @@
             <h2 class="long-type ">Long Term Stays</h2>
 
             <h3 class="week-type long-type">Select your preferred arrival dates</h3>
-            <label class="week-type long-type" for="00N8J000000Njlr">Arrival Preference 1:</label>
-            <label class="day-type" for="00N8J000000Njlr">Arrival Date:</label>
+            <label class="day-type week-type long-type" for="00N8J000000Njlr">Arrival Preference 1:</label>
+            <!-- <label class="day-type" for="00N8J000000Njlr">Arrival Date:</label> -->
             <span class="dateInput dateOnlyInput week-type long-type day-type">
                 <input id="00N8J000000Njlr" name="00N8J000000Njlr" size="12" type="text" placeholder="mm/dd/yyyy" />
             </span>
-            <label for="00N8J000000Njlw" class="week-type long-type">Arrival Preference 2:</label>
-            <span class="week-type long-type dateInput dateOnlyInput">
+            <label for="00N8J000000Njlw" class="week-type long-type day-type">Arrival Preference 2:</label>
+            <span class="week-type long-type day-type dateInput dateOnlyInput">
                     <input id="00N8J000000Njlw" name="00N8J000000Njlw" size="12" type="text" placeholder="mm/dd/yyyy" />
             </span>
 
